[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmapserver"
version = "0.0.2"
description = "Sanitize STHD files and spin up a TissUUmaps viewing server locally"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy",
    "tqdm",
    "STHD",
    "pandas",
    "anndata",
    "scipy",
    "subprocess-tee",
    "psutil",
    "requests",
]

[project.scripts]
tmapserver = "tmapserver.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tmapserver*"]

[tool.setuptools.package-data]
tmapserver = ["*.py"] 