[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adata-sanitize"
version = "0.0.2"
description = "Sanitize AnnData column names by removing/replacing special characters"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anndata",
]

[project.scripts]
adata-sanitize = "tmapserver.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tmapserver*"]

[tool.setuptools.package-data]
tmapserver = ["*.py"] 